V. alpha 0.4.11 - fix google chrome 35 layout problem

--- a/app/views/index/css/main.sass
+++ b/app/views/index/css/main.sass
@@ -56,14 +56,14 @@ $button-color: rgb(85, 85, 85)
 #blogmenu1
 	float: left
 	background-color: transparent
-	height: 500px
+	height: 50px
 	width: 0
 
 /* ---------------------Content---------------------
 
 #blog_content
 	margin-left: 18%
-	position: inherit
+	margin-top: 0
 	float: left
 	background-color: transparent
 	width: 70%
